--- a/extension/app/install.html
+++ b/extension/app/install.html
@@ -1,1 +1,23 @@
-Please install the following Chrome app!
+<!doctype html>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Twitch Mini Player</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/efgochcggfpajofoidkjhelkaihdflpo">
+
+  <link rel="stylesheet" href="css/install.css">
+</head>
+
+<body>
+
+  <div>The companion Chrome app is required for Twitch Mini Player to work.</div>
+
+  <a class="button install" href="#" onclick="chrome.webstore.install(); return false;">Install</a>
+
+</body>
+
+</html>
