fixes for windows

--- a/chrome-app/app/mini.html
+++ b/chrome-app/app/mini.html
@@ -13,11 +13,13 @@
 
 <body>
 
-  <svg class="twitch-logo" height="30px" version="1.1" viewBox="0 0 30 30" width="30px" x="0px" y="0px">
-    <path clip-rule="evenodd" d="M21,9h-2v6h2V9z M5.568,3L4,7v17h5v3h3.886L16,24h5l6-6V3H5.568z M25,16l-4,4h-6l-3,3v-3H8V5h17V16z M16,9h-2v6h2V9z" fill-rule="evenodd"></path>
+  <svg class="twitch-logo" height="26px" version="1.1" viewBox="0 0 94 32" width="75px" x="0px" y="0px">
+    <path clip-rule="evenodd" d="M88,5h-6V0h-9l-6,5h-5.5L59,7.5V5h-5V0H36v5H16l-5-5H0v22l5,5.25L14,32h6v-1.5l3,1.5h12l2-3l1,3h7v-3l3,3h8l0.5-3l2.5,3h10l3-3v3h4l3-3v3h7l7-6V10L88,5z M13,13H8v6h5v6H6l-4-4V2h6v5h5V13z M36,21.5L32.5,25H15V7h6v12h2V7h6v12h2V7h5V21.5z M44,25h-6V7h6V25z M44,5h-6V2h6V5z M57,13h-5v6h5v6h-7l-4-4V2h6v5h5V13z M72,13h-7v6h7v6h-9l-4-4V11l4-4h9V13z M91,25h-6V13h-5v12h-6V2h6v5h7l4,4V25z" fill-rule="evenodd"></path>
   </svg>
 
-  <div class="expand"><i class="fa fa-plus"></i></div>
+  <div class="button drag"><i class="fa fa-arrows"></i></div>
+  <div class="button maxi"><i class="fa fa-plus"></i></div>
+  <div class="button close"><i class="fa fa-close"></i></div>
 
   <script src="vendor/jquery.min.js"></script>
   <script src="js/mini.js"></script>
