--- a/chrome-app/app/chat.html
+++ b/chrome-app/app/chat.html
@@ -18,6 +18,7 @@
 
   <div class="buttons">
     <div class="button button-right close"><i class="fa fa-close"></i></div>
+    <div class="button button-right drag"><i class="fa fa-arrows"></i></div>
     <div style="clear:both"></div>
   </div>
 
