--- a/chrome-app/app/player.html
+++ b/chrome-app/app/player.html
@@ -21,6 +21,7 @@
     <div class="button chat"><i class="fa fa-comment"></i></div>
     <div class="button button-right close"><i class="fa fa-close"></i></div>
     <div class="button button-right mini"><i class="fa fa-minus"></i></div>
+    <div class="button button-right drag"><i class="fa fa-arrows"></i></div>
     <div style="clear:both"></div>
   </div>
 
