--- a/chrome-app/app/player.html
+++ b/chrome-app/app/player.html
@@ -26,6 +26,7 @@
   </div>
 
   <script src="vendor/jquery.min.js"></script>
+  <script src="vendor/google-analytics-bundle.js"></script>
   <script src="js/player.js"></script>
   <script src="js/adblocker.js"></script>
 
